# pydocs

./: pyproject.toml
src/pydocs/: __init__.py  classes.py  parser.py
