[project]
name = "pydocs"
version = "0.1.0"
description = "Python package for converting code into documentation."
readme = "README.md"
authors = [
    { name = "lucas-nelson-uiuc", email = "lucas.nelson.contacts@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "attrs>=24.3.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "GL08",
    "PR02",
    "MD041"
]
# remember to use single quotes for regex in TOML
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]
